--- a/notebooks/VVVGaiaAstrometry.ipynb
+++ b/notebooks/VVVGaiaAstrometry.ipynb
@@ -4678,9 +4678,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python39"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
