working on alignment

--- a/reduction/alignment.ipynb
+++ b/reduction/alignment.ipynb
@@ -37,6 +37,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "9e1267f7-0e6f-494c-8332-7d69fdedb3ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-08-03T16:50:14.662534: 1.11.1.dev1+g99753465\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jwst\n",
+    "\n",
+    "print(jwst.__version__)\n",
+    "JP-3285: Allow negative angles in engineering format. Add support for angle units by @mcara in #7683\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "eefac799-6217-468a-93f4-057e49cc2c95",
    "metadata": {},
@@ -559,6 +580,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "5c48e8f8-6541-471d-aabb-bcfe506a654c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00003_nrcalong_destreak.fits'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "b1f7b322-4bcd-4695-b89e-2e139d3e98d8",
    "metadata": {},
@@ -577,6 +619,123 @@
    "source": [
     "i1.split('_')[0][-3:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1ea6207f-ecab-4d57-bd1b-4ce5e5c0d96a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_08201_00001_nrcalong_destreak_realigned.fits'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "05ec013e-a77d-4755-b12d-bbb941bb3fcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Kept 7752 out of 9945 VVV stars using ksmag_limit>11 [align_to_catalogs]\n",
+      "INFO: For f405n merged 002 catalog /orange/adamginsburg/jwst/cloudc//F405N/pipeline/jw02221-o002_t001_nircam_clear-f405n-merged_cat.ecsv, found 9430 of 19563 sources meeting criteria mag<15 [align_to_catalogs]\n",
+      "2023-08-02T18:57:48.707773: Before realignment, offset is -0.054476696561778226 arcsec, 0.015985920926198105 arcsec.  Found 256 matches.\n",
+      "2023-08-02T18:57:48.715219: CRVAL before 266.59154983035 -28.556436704257\n",
+      "2023-08-02T18:57:48.750006: CRVAL after 266.5920232961 -28.555357811457\n",
+      "INFO: \n",
+      "                Inconsistent SIP distortion information is present in the FITS header and the WCS object:\n",
+      "                SIP coefficients were detected, but CTYPE is missing a \"-SIP\" suffix.\n",
+      "                astropy.wcs is using the SIP distortion coefficients,\n",
+      "                therefore the coordinates calculated here might be incorrect.\n",
+      "\n",
+      "                If you do not want to apply the SIP distortion coefficients,\n",
+      "                please remove the SIP coefficients from the FITS header or the\n",
+      "                WCS object.  As an example, if the image is already distortion-corrected\n",
+      "                (e.g., drizzled) then distortion components should not apply and the SIP\n",
+      "                coefficients should be removed.\n",
+      "\n",
+      "                While the SIP distortion coefficients are being applied here, if that was indeed the intent,\n",
+      "                for consistency please append \"-SIP\" to the CTYPE in the FITS header or the WCS object.\n",
+      "\n",
+      "                 [astropy.wcs.wcs]\n",
+      "2023-08-02T18:57:48.819717: After realignment, offset is -0.058613451551536855 arcsec, 0.020851627662921146 arcsec with 253 mathces\n",
+      "INFO: \n",
+      "                Inconsistent SIP distortion information is present in the FITS header and the WCS object:\n",
+      "                SIP coefficients were detected, but CTYPE is missing a \"-SIP\" suffix.\n",
+      "                astropy.wcs is using the SIP distortion coefficients,\n",
+      "                therefore the coordinates calculated here might be incorrect.\n",
+      "\n",
+      "                If you do not want to apply the SIP distortion coefficients,\n",
+      "                please remove the SIP coefficients from the FITS header or the\n",
+      "                WCS object.  As an example, if the image is already distortion-corrected\n",
+      "                (e.g., drizzled) then distortion components should not apply and the SIP\n",
+      "                coefficients should be removed.\n",
+      "\n",
+      "                While the SIP distortion coefficients are being applied here, if that was indeed the intent,\n",
+      "                for consistency please append \"-SIP\" to the CTYPE in the FITS header or the WCS object.\n",
+      "\n",
+      "                 [astropy.wcs.wcs]\n",
+      "2023-08-02T18:57:48.867048: After re-realignment, offset is -0.058613451551536855 arcsec, 0.020851627662921146 arcsec using 253 matches\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Some non-standard WCS keywords were excluded: A_ORDER, A_0_2, A_0_3, A_1_1, A_1_2, A_2_0, A_2_1, A_3_0, B_ORDER, B_0_2, B_0_3, B_1_1, B_1_2, B_2_0, B_2_1, B_3_0, AP_ORDER, AP_0_2, AP_0_3, AP_1_1, AP_1_2, AP_2_0, AP_2_1, AP_3_0, BP_ORDER, BP_0_2, BP_0_3, BP_1_1, BP_1_2, BP_2_0, BP_2_1, BP_3_0 Use the ``relax`` kwarg to control this. [astropy.wcs.wcs]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<astropy.io.fits.hdu.image.PrimaryHDU object at 0x2b159089a670>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2b159013d430>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2b1599e75f10>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2b15995112e0>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2b158f8e4700>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2b158f8e4100>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2b158f8e4be0>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2b158f8e4940>, <astropy.io.fits.hdu.table.BinTableHDU object at 0x2b158f8e4160>]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "realigned_vvv_i = i.split('.')[0]+'_realigned.fits'\n",
+    "shutil.copy(i, realigned_vvv_i)\n",
+    "\n",
+    "raoffset = -1.65*u.arcsec\n",
+    "decoffset = -3.9*u.arcsec\n",
+    "\n",
+    "realign_to_vvv(filtername=filtername.lower(), fov_regname=fov_regname[regionname], basepath=basepath, module=module, fieldnumber=field, \n",
+    "               imfile=realigned_vvv_i, ksmag_limit=15 if filtername=='f410m' else 11, mag_limit=15, raoffset=raoffset, decoffset=decoffset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21edc15b-57aa-4a68-901e-dd84e6e9b3bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9474529-c155-4838-ac19-cf0a3d76e9e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
