more alignment work

--- a/notebooks/EvaluateOffsetFrameProblem-CloudC.ipynb
+++ b/notebooks/EvaluateOffsetFrameProblem-CloudC.ipynb
@@ -10,13 +10,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/local/4865885/ipykernel_39752/2258313207.py:1: DeprecationWarning: `photutils.CircularAperture` is a deprecated alias for `photutils.aperture.CircularAperture` and will be removed in the future. Instead, please use `from photutils.aperture import CircularAperture` to silence this warning.\n",
+      "/scratch/local/5320906/ipykernel_22987/2258313207.py:1: DeprecationWarning: `photutils.CircularAperture` is a deprecated alias for `photutils.aperture.CircularAperture` and will be removed in the future. Instead, please use `from photutils.aperture import CircularAperture` to silence this warning.\n",
       "  from photutils import CircularAperture, EPSFBuilder, find_peaks, CircularAnnulus\n",
-      "/scratch/local/4865885/ipykernel_39752/2258313207.py:1: DeprecationWarning: `photutils.EPSFBuilder` is a deprecated alias for `photutils.psf.EPSFBuilder` and will be removed in the future. Instead, please use `from photutils.psf import EPSFBuilder` to silence this warning.\n",
+      "/scratch/local/5320906/ipykernel_22987/2258313207.py:1: DeprecationWarning: `photutils.EPSFBuilder` is a deprecated alias for `photutils.psf.EPSFBuilder` and will be removed in the future. Instead, please use `from photutils.psf import EPSFBuilder` to silence this warning.\n",
       "  from photutils import CircularAperture, EPSFBuilder, find_peaks, CircularAnnulus\n",
-      "/scratch/local/4865885/ipykernel_39752/2258313207.py:1: DeprecationWarning: `photutils.find_peaks` is a deprecated alias for `photutils.detection.find_peaks` and will be removed in the future. Instead, please use `from photutils.detection import find_peaks` to silence this warning.\n",
+      "/scratch/local/5320906/ipykernel_22987/2258313207.py:1: DeprecationWarning: `photutils.find_peaks` is a deprecated alias for `photutils.detection.find_peaks` and will be removed in the future. Instead, please use `from photutils.detection import find_peaks` to silence this warning.\n",
       "  from photutils import CircularAperture, EPSFBuilder, find_peaks, CircularAnnulus\n",
-      "/scratch/local/4865885/ipykernel_39752/2258313207.py:1: DeprecationWarning: `photutils.CircularAnnulus` is a deprecated alias for `photutils.aperture.CircularAnnulus` and will be removed in the future. Instead, please use `from photutils.aperture import CircularAnnulus` to silence this warning.\n",
+      "/scratch/local/5320906/ipykernel_22987/2258313207.py:1: DeprecationWarning: `photutils.CircularAnnulus` is a deprecated alias for `photutils.aperture.CircularAnnulus` and will be removed in the future. Instead, please use `from photutils.aperture import CircularAnnulus` to silence this warning.\n",
       "  from photutils import CircularAperture, EPSFBuilder, find_peaks, CircularAnnulus\n"
      ]
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "0173446c-7b50-4703-8a3d-3161a75070e8",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "406dcf1a-3547-427d-b1be-5a4d58d8f113",
    "metadata": {},
    "outputs": [],
@@ -110,12 +110,13 @@
     "#reg = regions.Regions.read('/orange/adamginsburg/jwst/cloudc/regions/topleft.reg')\n",
     "#reg = regions.Regions.read('/orange/adamginsburg/jwst/cloudc/regions/topright.reg')\n",
     "#reg = regions.Regions.read('/orange/adamginsburg/jwst/cloudc/regions/bottomleft.reg')\n",
-    "reg = regions.Regions.read('/orange/adamginsburg/jwst/cloudc/regions/bottomright.reg')"
+    "reg = regions.Regions.read('/orange/adamginsburg/jwst/cloudc/regions/bottomright.reg')\n",
+    "#reg = regions.Regions.read('/orange/adamginsburg/jwst/cloudc/regions/ref.reg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "a8d87760-4d75-48af-8080-2b6c14372222",
    "metadata": {},
    "outputs": [],
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "67435cdb-6166-4d10-838d-28cd6147f80f",
    "metadata": {
     "tags": []
@@ -134,25 +135,25 @@
     {
      "data": {
       "text/plain": [
-       "(16,\n",
-       " ['/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_realigned.fits',\n",
-       "  '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002001_08201_00002_nrcalong_destreak_realigned.fits',\n",
-       "  '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002001_02201_00001_nrcalong_destreak_realigned.fits'])"
+       "(32,\n",
+       " ['/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002001_08201_00004_nrcblong_destreak.fits',\n",
+       "  '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002001_02201_00001_nrcblong_destreak.fits',\n",
+       "  '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_08201_00001_nrcalong_destreak.fits'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "files = glob.glob(\"/orange/adamginsburg/jwst/cloudc/F405N/pipeline/*destreak_realigned.fits\")\n",
+    "files = glob.glob(\"/orange/adamginsburg/jwst/cloudc/F405N/pipeline/*destreak.fits\")\n",
     "len(files), files[:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "19198c5c-98b8-4603-b568-87ac29106a2d",
    "metadata": {},
    "outputs": [],
@@ -162,9 +163,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
+   "id": "3d52cad9-b122-48a1-8b45-d1ffed5f1899",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<astropy.io.fits.hdu.image.PrimaryHDU object at 0x2acd9771d8b0>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2acdcf81c430>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2acdcf81c670>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2acdcf81c730>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2acdcf81c970>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2acdcf81cc10>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2acdcf81ce50>, <astropy.io.fits.hdu.image.ImageHDU object at 0x2acdcf82e1c0>, <astropy.io.fits.hdu.table.BinTableHDU object at 0x2acdcf82e340>]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fits.open(files[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c01f0690-15bd-4a3a-931b-f627f8b0ccf8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: FITSFixedWarning: 'datfix' made the change 'Set DATE-BEG to '2023-04-15T16:03:04.827' from MJD-BEG.\n",
+      "Set DATE-AVG to '2023-04-15T16:03:31.669' from MJD-AVG.\n",
+      "Set DATE-END to '2023-04-15T16:03:58.511' from MJD-END'. [astropy.wcs.wcs]\n",
+      "WARNING: FITSFixedWarning: 'obsfix' made the change 'Set OBSGEO-L to  -134.315532 from OBSGEO-[XYZ].\n",
+      "Set OBSGEO-B to    -3.213224 from OBSGEO-[XYZ].\n",
+      "Set OBSGEO-H to 1299094589.651 from OBSGEO-[XYZ]'. [astropy.wcs.wcs]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<regions.core.mask.RegionMask at 0x2acd9773c3d0>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg[0].to_pixel(wcs.WCS(fits.getheader(files[0], ext=1))).to_mask()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "eef7a332-b26a-486a-9ea0-4925c82f67a2",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -504,6 +565,10 @@
    "execution_count": 15,
    "id": "e226fa67-9848-488c-b797-f3ee2a74b797",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -550,6 +615,10 @@
    "execution_count": 16,
    "id": "efae9c3d-9399-42fb-98dc-8b3bb5d08fd3",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -717,6 +786,57 @@
     "        ax.set_yticks([])\n",
     "    pl.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b2f13343-33e2-4dda-a5da-fd6325acb2bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tbl = Table.read('/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002001_08201_00001_nrcalong_destreak_realigned_to_vvv_cat.ecsv')\n",
+    "#crds = tbl['skycoord']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ba16c1a-63b1-47ca-867f-668e49727fd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c468e46-1c8d-4d6c-a007-2783665d5bef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc67387c-9acb-4937-9607-3342a51b96db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3621e28c-025e-4f1c-98da-8f4ed4829863",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e38fc4b0-bdd6-4153-b129-a5c3e2d4631a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
