--- a/reduction/alignment.ipynb
+++ b/reduction/alignment.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "50bfbaa2-17f7-4823-8213-12bc00ac3933",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"Important:  Gaia archive will be intermittently unavailable due to scheduled maintenance on Wednesday 02-08-2023\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from glob import glob\n",
     "from astroquery.mast import Mast, Observations\n",
@@ -32,7 +24,8 @@
     "from astropy.table import Table\n",
     "\n",
     "from align_to_catalogs import *\n",
-    "import astropy.units as u"
+    "import astropy.units as u\n",
+    "from reproject.mosaicking import find_optimal_celestial_wcs"
    ]
   },
   {
@@ -100,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "2f373695-4f08-461f-a619-a0da9ae15e9b",
    "metadata": {},
    "outputs": [],
@@ -645,7 +638,13 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "05ec013e-a77d-4755-b12d-bbb941bb3fcd",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -742,6 +741,10 @@
    "execution_count": 16,
    "id": "0cf80727-6a17-434a-a817-4e8e97f661e5",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1615,7 +1618,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35737fb3-f6b3-45a2-a5e8-e4f4476c9a68",
+   "id": "49603b0f-3196-404e-a6d2-4ad15e57a99d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "950a398b-337d-4aef-8d3f-2cd82365d465",
    "metadata": {},
    "outputs": [],
    "source": []
