working on alignment

--- a/reduction/reduction_2.ipynb
+++ b/reduction/reduction_2.ipynb
@@ -255,7 +255,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "ac9e059a-1f0e-4422-931e-cf436a6b5915",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -450,7 +456,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "64e2f9af-c0ac-4791-93fe-abc4a4641f53",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -661,7 +673,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "d9dfa5ca-940f-48cb-9dcb-ac8269451ca1",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1084,6 +1102,10 @@
    "execution_count": 16,
    "id": "64e8835d-106c-4e85-95d0-9b9b27f831c7",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
