working on fixing aligned manually

--- a/reduction/alignment.ipynb
+++ b/reduction/alignment.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "50bfbaa2-17f7-4823-8213-12bc00ac3933",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fatal: detected dubious ownership in repository at '/blue/adamginsburg/adamginsburg/repos/dask'\n",
-      "To add an exception for this directory, call:\n",
-      "\n",
-      "\tgit config --global --add safe.directory /blue/adamginsburg/adamginsburg/repos/dask\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from glob import glob\n",
     "from astroquery.mast import Mast, Observations\n",
@@ -36,21 +25,20 @@
     "\n",
     "from align_to_catalogs import *\n",
     "import astropy.units as u\n",
-    "from reproject.mosaicking import find_optimal_celestial_wcs"
+    "#from reproject.mosaicking import find_optimal_celestial_wcs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "9e1267f7-0e6f-494c-8332-7d69fdedb3ee",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "illegal target for annotation (1589681051.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/scratch/local/5634095/ipykernel_45564/1589681051.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    JP-3285: Allow negative angles in engineering format. Add support for angle units by @mcara in #7683\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m illegal target for annotation\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-08-25T12:52:59.302124: 1.11.3\n"
      ]
     }
    ],
@@ -58,12 +46,12 @@
     "import jwst\n",
     "\n",
     "print(jwst.__version__)\n",
-    "JP-3285: Allow negative angles in engineering format. Add support for angle units by @mcara in #7683\n"
+    "#JP-3285: Allow negative angles in engineering format. Add support for angle units by @mcara in #7683\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "eefac799-6217-468a-93f4-057e49cc2c95",
    "metadata": {},
    "outputs": [],
@@ -81,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b1cab61e-c081-4712-93a7-bce4bd7a4813",
    "metadata": {},
    "outputs": [
@@ -94,7 +82,7 @@
        "<Quantity 1. arcsec>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "2f373695-4f08-461f-a619-a0da9ae15e9b",
    "metadata": {},
    "outputs": [],
@@ -117,7 +105,7 @@
     "basepath = f'/orange/adamginsburg/jwst/{regionname}/'\n",
     "filtername = 'F405N'\n",
     "field = '002' \n",
-    "module = 'merged'\n",
+    "module = 'nrcb'\n",
     "output_dir = f'/orange/adamginsburg/jwst/{regionname}/{filtername}/pipeline/'"
    ]
   },
@@ -749,6 +737,10 @@
    "execution_count": 10,
    "id": "0cf80727-6a17-434a-a817-4e8e97f661e5",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
